@@ -274,4 +274,28 @@ public class Simulate extends Input
 		updateProgressDialog(bytesRead);
 		return sb.toString();
 	}
+    
+	/**
+	 * Method to remove the leading "x" character in each dotted part of a string.
+	 * HSpice decides to add "x" in front of every cell name, so the path "me.you"
+	 * appears as "xme.xyou".
+	 * @param name the string from HSpice.
+	 * @return the string without leading "X"s.
+	 */
+	static String removeLeadingX(String name)
+	{
+		// remove all of the "x" characters at the start of every instance name
+		int dotPos = -1;
+		for(;;)
+		{
+			int xPos = dotPos + 1;
+			if (name.length() > xPos && name.charAt(xPos) == 'x')
+			{
+				name = name.substring(0, xPos) + name.substring(xPos+1);
+			}
+			dotPos = name.indexOf('.', xPos);
+			if (dotPos < 0) break;
+		}
+		return name;
+	}
 }
